--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,10 +62,51 @@
 }
 
 @layer base {
+   ::-webkit-scrollbar {
+    width: 14px; /* Adjust the width of the vertical scrollbar */
+    height: 14px; /* Adjust the height of the horizontal scrollbar */
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: hsl(var(--muted)); /* Track color */
+    border-radius: var(--radius); /* Rounded corners */
+    padding: 2px; /* Add padding around the track */
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--border)); /* Thumb color */
+    border-radius: var(--radius); /* Rounded corners */
+    border: 2px solid transparent; /* Add spacing around the thumb */
+    background-clip: padding-box; /* Ensure the border stays visible */
+     opacity: 0; /* Thumb is initially invisible */
+    transition: opacity 0.3s ease-in-out; /* Smooth fade-in/out */
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(var(--border)); /* Thumb hover color */
+  }
+
+  /* Ensure compatibility with dark mode */
+  .dark ::-webkit-scrollbar-track {
+    background-color: hsl(var(--muted));
+  }
+
+  .dark ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--border));
+  }
+
+  .dark ::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(var(--foreground));
+  }
+  :hover ::-webkit-scrollbar-thumb,
+  ::-webkit-scrollbar-thumb:active {
+    opacity: 1;
+  }
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
+   
   }
 }
